--- a/sass/_landing.scss
+++ b/sass/_landing.scss
@@ -64,6 +64,7 @@
 }
 
 .bg-enter {
+  background-color:rgb(226, 219, 219);
   padding: 2rem 5rem;
   border-radius: 5rem;
   position: absolute;
